fix dialogHeight and overflow; fix some reports

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -249,4 +249,6 @@ md-grid-list.left-aligned-grid-list md-grid-tile.mat-grid-tile .mat-figure {
   flex-grow: 1;
 }
 
-
+md-dialog-container.mat-dialog-container {
+  overflow: hidden;
+}
